--- a/index.html
+++ b/index.html
@@ -2,458 +2,23 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Our Space 💖</title>
-  <link rel="stylesheet" href="styles.css" />
-  <!-- Firebase v10 modules via CDN -->
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-app.js";
-    import { getAuth, onAuthStateChanged, signInWithPopup, GoogleAuthProvider, signOut } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-auth.js";
-    import { getFirestore, doc, getDoc, setDoc, collection, addDoc, query, where, getDocs, Timestamp } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-firestore.js";
-    import { getStorage, ref, uploadBytes, getDownloadURL, listAll } from "https://www.gstatic.com/firebasejs/10.12.4/firebase-storage.js";
-
-    // ---- 1) PASTE YOUR FIREBASE CONFIG HERE (from Firebase console > Project settings) ----
-    const firebaseConfig = {
-      apiKey: "PASTE_API_KEY",
-      authDomain: "PASTE_AUTH_DOMAIN",
-      projectId: "PASTE_PROJECT_ID",
-      storageBucket: "PASTE_STORAGE_BUCKET",
-      messagingSenderId: "PASTE_MSG_SENDER_ID",
-      appId: "PASTE_APP_ID"
-    };
-
-    // ---- 2) Initialize Firebase ----
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getFirestore(app);
-    const storage = getStorage(app);
-
-    // ---- 3) Simple Router (hash-based) ----
-    const routes = ["home","gallery","documents","date","timeline","bucket","letters","playlist","countdowns"];
-    function showRoute(route){
-      routes.forEach(r => {
-        const el = document.getElementById(`route-${r}`);
-        if (el) el.style.display = (r === route) ? "block" : "none";
-      });
-      window.location.hash = route;
-    }
-    window.addEventListener("hashchange", () => {
-      const route = window.location.hash.replace("#","") || "home";
-      showRoute(route);
-    });
-
-    // ---- 4) Role helpers ----
-    const roleBadge = document.getElementById("role-badge");
-    const userBadge = document.getElementById("user-badge");
-    let currentUser = null;
-    let currentRole = "public"; // public | friend | owner
-
-    async function fetchRole(email){
-      try{
-        const docRef = doc(db, "roles", email);
-        const snap = await getDoc(docRef);
-        if (snap.exists()){
-          const data = snap.data();
-          return data.role || "public";
-        }
-        return "public";
-      } catch(e){
-        console.error("fetchRole error", e);
-        return "public";
-      }
-    }
-
-    function renderRole(role){
-      roleBadge.textContent = role.toUpperCase();
-      document.body.setAttribute("data-role", role);
-      // Gate sections via CSS and minimal checks here
-    }
-
-    // ---- 5) Auth UI ----
-    const btnLogin = document.getElementById("btn-login");
-    const btnLogout = document.getElementById("btn-logout");
-    const provider = new GoogleAuthProvider();
-
-    btnLogin.addEventListener("click", async () => {
-      try{
-        await signInWithPopup(auth, provider);
-      } catch(e){
-        alert("Login failed: " + e.message);
-      }
-    });
-
-    btnLogout.addEventListener("click", async () => {
-      await signOut(auth);
-    });
-
-    onAuthStateChanged(auth, async (user) => {
-      currentUser = user;
-      if (user){
-        userBadge.textContent = user.email;
-        const role = await fetchRole(user.email);
-        currentRole = role;
-        renderRole(role);
-        document.getElementById("auth-state").textContent = "Signed in";
-      } else {
-        userBadge.textContent = "Guest";
-        currentRole = "public";
-        renderRole("public");
-        document.getElementById("auth-state").textContent = "Signed out";
-      }
-    });
-
-    // ---- 6) Gallery (Storage) ----
-    async function loadGallery(){
-      // public gallery only for demo; path: public/gallery/
-      const listRef = ref(storage, "public/gallery/");
-      const res = await listAll(listRef);
-      const wrap = document.getElementById("gallery-wrap");
-      wrap.innerHTML = "";
-      for (const item of res.items){
-        const url = await getDownloadURL(item);
-        const img = document.createElement("img");
-        img.src = url;
-        img.alt = item.name;
-        img.className = "thumb";
-        wrap.appendChild(img);
-      }
-    }
-    document.getElementById("btn-refresh-gallery").addEventListener("click", loadGallery);
-
-    // Upload to correct path based on selected visibility
-    document.getElementById("gallery-upload").addEventListener("change", async (e) => {
-      const file = e.target.files[0];
-      const scope = document.querySelector('input[name="gallery-scope"]:checked').value; // public|friends|private
-      if (!file){ return; }
-      if (currentRole !== "owner"){
-        alert("Only owners can upload.");
-        e.target.value = "";
-        return;
-      }
-      const path = `${scope}/gallery/${Date.now()}-${file.name}`;
-      const fileRef = ref(storage, path);
-      await uploadBytes(fileRef, file);
-      alert("Uploaded!");
-      if (scope === "public") await loadGallery();
-      e.target.value = "";
-    });
-
-    // ---- 7) Documents (Storage) ----
-    async function loadDocs(){
-      const wrap = document.getElementById("docs-wrap");
-      wrap.innerHTML = "<p>Docs are organized by visibility folders in Storage: public/docs, friends/docs, private/docs.</p>";
-    }
-    document.getElementById("btn-refresh-docs").addEventListener("click", loadDocs);
-
-    document.getElementById("docs-upload").addEventListener("change", async (e) => {
-      const file = e.target.files[0];
-      const scope = document.querySelector('input[name="docs-scope"]:checked').value;
-      if (!file){ return; }
-      if (currentRole !== "owner"){
-        alert("Only owners can upload.");
-        e.target.value = "";
-        return;
-      }
-      const path = `${scope}/docs/${Date.now()}-${file.name}`;
-      const fileRef = ref(storage, path);
-      await uploadBytes(fileRef, file);
-      alert("Document uploaded!");
-      e.target.value = "";
-    });
-
-    // ---- 8) Date Night Planner (Firestore) ----
-    const dateForm = document.getElementById("date-form");
-    dateForm.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      if (!currentUser){ alert("Sign in first."); return; }
-      const fd = new FormData(dateForm);
-      const payload = {
-        from: currentUser.email,
-        to: fd.get("to"),
-        type: fd.get("type"),
-        date: fd.get("date"),
-        time: fd.get("time"),
-        place: fd.get("place"),
-        vibe: fd.get("vibe"),
-        message: fd.get("message"),
-        createdAt: Timestamp.now()
-      };
-      try{
-        await addDoc(collection(db, "dateInvites"), payload);
-        document.getElementById("invite-output").textContent =
-          `${payload.from} invites ${payload.to} for a ${payload.vibe} ${payload.type} on ${payload.date} at ${payload.time} @ ${payload.place}. Note: "${payload.message}"`;
-        dateForm.reset();
-      } catch(e){
-        alert("Failed to save invite: " + e.message);
-      }
-    });
-
-    // ---- 9) Timeline (Firestore) ----
-    const timelineForm = document.getElementById("timeline-form");
-    const timelineList = document.getElementById("timeline-list");
-
-    timelineForm.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      if (currentRole !== "owner"){ alert("Only owners can add timeline events."); return; }
-      const fd = new FormData(timelineForm);
-      const payload = {
-        date: fd.get("tdate"),
-        title: fd.get("ttitle"),
-        note: fd.get("tnote"),
-        createdAt: Timestamp.now()
-      };
-      await addDoc(collection(db, "private_timeline"), payload);
-      timelineForm.reset();
-      loadTimeline();
-    });
-
-    async function loadTimeline(){
-      timelineList.innerHTML = "";
-      const q = query(collection(db, "private_timeline"));
-      const snap = await getDocs(q);
-      const items = [];
-      snap.forEach(docu => items.push(docu.data()));
-      items.sort((a,b) => (a.date || "").localeCompare(b.date));
-      for (const it of items){
-        const li = document.createElement("li");
-        li.innerHTML = `<strong>${it.date}</strong> — ${it.title}<br><span>${it.note||""}</span>`;
-        timelineList.appendChild(li);
-      }
-    }
-    document.getElementById("btn-refresh-timeline").addEventListener("click", loadTimeline);
-
-    // ---- 10) Bucket List (Firestore, friends+owner can view; only owner can add) ----
-    const bucketForm = document.getElementById("bucket-form");
-    const bucketList = document.getElementById("bucket-list");
-    bucketForm.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      if (currentRole !== "owner"){ alert("Only owners can add items."); return; }
-      const fd = new FormData(bucketForm);
-      const payload = {
-        item: fd.get("bitem"),
-        done: false,
-        createdAt: Timestamp.now()
-      };
-      await addDoc(collection(db, "friends_bucket"), payload);
-      bucketForm.reset();
-      loadBucket();
-    });
-    async function loadBucket(){
-      bucketList.innerHTML = "";
-      const q = query(collection(db, "friends_bucket"));
-      const snap = await getDocs(q);
-      const items = [];
-      snap.forEach(docu => items.push({id: docu.id, ...docu.data()}));
-      for (const it of items){
-        const li = document.createElement("li");
-        li.textContent = (it.done ? "✅ " : "⬜ ") + it.item;
-        bucketList.appendChild(li);
-      }
-    }
-    document.getElementById("btn-refresh-bucket").addEventListener("click", loadBucket);
-
-    // ---- 11) Letters (Firestore, private) ----
-    const letterForm = document.getElementById("letter-form");
-    const letterList = document.getElementById("letter-list");
-    letterForm.addEventListener("submit", async (e) => {
-      e.preventDefault();
-      if (currentRole !== "owner"){ alert("Only owners can add letters."); return; }
-      const fd = new FormData(letterForm);
-      const payload = {
-        title: fd.get("ltitle"),
-        body: fd.get("lbody"),
-        createdAt: Timestamp.now()
-      };
-      await addDoc(collection(db, "private_letters"), payload);
-      letterForm.reset();
-      loadLetters();
-    });
-    async function loadLetters(){
-      letterList.innerHTML = "";
-      const q = query(collection(db, "private_letters"));
-      const snap = await getDocs(q);
-      const items = [];
-      snap.forEach(docu => items.push(docu.data()));
-      items.sort((a,b) => (a.createdAt?.seconds||0) - (b.createdAt?.seconds||0));
-      for (const it of items){
-        const li = document.createElement("li");
-        li.innerHTML = `<strong>${it.title}</strong><br>${(it.body||"").replaceAll("\n","<br>")}`;
-        letterList.appendChild(li);
-      }
-    }
-    document.getElementById("btn-refresh-letters").addEventListener("click", loadLetters);
-
-    // ---- 12) Playlist + Countdowns (client-side only stubs) ----
-    // Playlist: just embed YouTube/Spotify in HTML.
-    // Countdowns: simple input -> display time remaining.
-
-    // ---- 13) Initial route ----
-    window.addEventListener("load", () => {
-      const r = window.location.hash.replace("#","") || "home";
-      showRoute(r);
-    });
-
-  </script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Palworld</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
-<body data-role="public">
+<body>
   <header>
-    <div class="brand">💖 Our Space</div>
-    <nav>
-      <a href="#home">Home</a>
-      <a href="#gallery">Gallery</a>
-      <a href="#documents">Docs</a>
-      <a href="#date">Date Planner</a>
-      <a href="#timeline">Timeline</a>
-      <a href="#bucket">Bucket List</a>
-      <a href="#letters">Letters</a>
-      <a href="#playlist">Playlist</a>
-      <a href="#countdowns">Countdowns</a>
-    </nav>
-    <div class="auth">
-      <span id="auth-state">Signed out</span> ·
-      <span id="user-badge">Guest</span> ·
-      Role: <span id="role-badge">PUBLIC</span>
-      <button id="btn-login">Sign in</button>
-      <button id="btn-logout">Sign out</button>
-    </div>
+    <h1>Welcome to Palworld!</h1>
   </header>
 
-  <!-- ROUTE: Home (Public) -->
-  <section id="route-home" class="route">
-    <h1>Welcome to Our Little Home 🌻</h1>
-    <p>This is the public landing area. Sign in to see more!</p>
-    <div class="card">
-      <h3>About Us</h3>
-      <p>A tiny space on the internet where we keep our memories, make new plans, and celebrate our love.</p>
-    </div>
-  </section>
-
-  <!-- ROUTE: Gallery -->
-  <section id="route-gallery" class="route gated-friends">
-    <h2>Gallery</h2>
-    <p>Upload photos (owners only). Choose visibility: Public / Friends / Private.</p>
-    <div class="upload-row">
-      <label><input type="radio" name="gallery-scope" value="public" checked> Public</label>
-      <label><input type="radio" name="gallery-scope" value="friends"> Friends</label>
-      <label><input type="radio" name="gallery-scope" value="private"> Private</label>
-      <input type="file" id="gallery-upload" accept="image/*" />
-      <button id="btn-refresh-gallery">Refresh Public Gallery</button>
-    </div>
-    <div id="gallery-wrap" class="gallery"></div>
-  </section>
-
-  <!-- ROUTE: Documents -->
-  <section id="route-documents" class="route gated-friends">
-    <h2>Documents</h2>
-    <p>Upload letters, plans, PDFs, etc. (owners only).</p>
-    <div class="upload-row">
-      <label><input type="radio" name="docs-scope" value="public" checked> Public</label>
-      <label><input type="radio" name="docs-scope" value="friends"> Friends</label>
-      <label><input type="radio" name="docs-scope" value="private"> Private</label>
-      <input type="file" id="docs-upload" />
-      <button id="btn-refresh-docs">Notes</button>
-    </div>
-    <div id="docs-wrap"></div>
-  </section>
-
-  <!-- ROUTE: Date Planner -->
-  <section id="route-date" class="route gated-owner">
-    <h2>Plan a Date Night</h2>
-    <form id="date-form" class="form">
-      <label>Invitee Email</label>
-      <input name="to" type="email" placeholder="her@email.com" required />
-      <label>Type</label>
-      <select name="type">
-        <option>Dinner</option>
-        <option>Movie Night</option>
-        <option>Cooking Together</option>
-        <option>Virtual Game Night</option>
-      </select>
-      <label>Date</label>
-      <input name="date" type="date" required />
-      <label>Time</label>
-      <input name="time" type="time" required />
-      <label>Place</label>
-      <input name="place" type="text" placeholder="Restaurant / Home / Online" required />
-      <label>Vibe</label>
-      <select name="vibe">
-        <option>Cozy</option>
-        <option>Adventurous</option>
-        <option>Romantic</option>
-        <option>Chill</option>
-      </select>
-      <label>Message</label>
-      <textarea name="message" rows="4" placeholder="Write something cute 💕"></textarea>
-      <button type="submit">Create Invite</button>
-    </form>
-    <div id="invite-output" class="invite"></div>
-  </section>
-
-  <!-- ROUTE: Timeline (private) -->
-  <section id="route-timeline" class="route gated-owner">
-    <h2>Our Timeline</h2>
-    <form id="timeline-form" class="form">
-      <label>Date</label>
-      <input name="tdate" type="date" required />
-      <label>Title</label>
-      <input name="ttitle" type="text" required />
-      <label>Note</label>
-      <textarea name="tnote" rows="3"></textarea>
-      <button type="submit">Add Event</button>
-      <button type="button" id="btn-refresh-timeline">Refresh</button>
-    </form>
-    <ul id="timeline-list" class="list"></ul>
-  </section>
-
-  <!-- ROUTE: Bucket List (friends+) -->
-  <section id="route-bucket" class="route gated-friends">
-    <h2>Bucket List</h2>
-    <form id="bucket-form" class="form">
-      <label>New Item</label>
-      <input name="bitem" type="text" placeholder="e.g., Watch sunrise on a beach" />
-      <button type="submit">Add</button>
-      <button type="button" id="btn-refresh-bucket">Refresh</button>
-    </form>
-    <ul id="bucket-list" class="list"></ul>
-  </section>
-
-  <!-- ROUTE: Letters (private) -->
-  <section id="route-letters" class="route gated-owner">
-    <h2>Letters</h2>
-    <form id="letter-form" class="form">
-      <label>Title</label>
-      <input name="ltitle" type="text" required />
-      <label>Letter</label>
-      <textarea name="lbody" rows="6" placeholder="Write your heart out..."></textarea>
-      <button type="submit">Save</button>
-      <button type="button" id="btn-refresh-letters">Refresh</button>
-    </form>
-    <ul id="letter-list" class="list"></ul>
-  </section>
-
-  <!-- ROUTE: Playlist (public embed) -->
-  <section id="route-playlist" class="route">
-    <h2>Our Playlist 🎶</h2>
-    <p>Paste your Spotify/YouTube embed here:</p>
-    <div class="card">
-      <!-- Example YouTube embed -->
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/5qap5aO4i9A" title="YouTube video" frameborder="0" allowfullscreen></iframe>
-    </div>
-  </section>
-
-  <!-- ROUTE: Countdowns (public) -->
-  <section id="route-countdowns" class="route">
-    <h2>Countdowns</h2>
-    <div class="card">
-      <label>Target Date/Time</label>
-      <input id="cdatetime" type="datetime-local" />
-      <button onclick="(function(){const v=document.getElementById('cdatetime').value; if(!v){alert('Pick date/time');return;} const t=new Date(v).getTime(); const out=document.getElementById('cd-out'); clearInterval(window._cdi); window._cdi=setInterval(()=>{const diff=t-Date.now(); if(diff<=0){out.textContent='🎉 It\'s time!'; clearInterval(window._cdi); return;} const d=Math.floor(diff/86400000); const h=Math.floor((diff%86400000)/3600000); const m=Math.floor((diff%3600000)/60000); const s=Math.floor((diff%60000)/1000); out.textContent=`${d}d ${h}h ${m}m ${s}s`;},1000)})();">Start</button>
-      <div id="cd-out" class="countdown"></div>
-    </div>
-  </section>
+  <main>
+    <section>
+      <p>This is a simple starter website deployed on GitHub Pages 🚀</p>
+    </section>
+  </main>
 
   <footer>
-    <small>Built with ❤️ for us.</small>
+    <p>© 2025 Palworld Project</p>
   </footer>
 </body>
 </html>
