--- a/index.html
+++ b/index.html
@@ -1,70 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Our World 💖</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Palworld</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Hero Section -->
-  <header class="hero">
-    <h1>Welcome to Our World 🌸</h1>
-    <p>Debayan & [Her Name]</p>
+
+  <header>
+    <h1>🌸 Welcome to Palworld 🌸</h1>
+    <p>A little corner just for us</p>
   </header>
 
-  <!-- About Us -->
-  <section class="about">
-    <h2>About Us</h2>
-    <p>It all started with a text... and grew into something beautiful 💕</p>
-    <ul>
-      <li>📅 July 2024 – First chats</li>
-      <li>🌻 October 2024 – First meeting</li>
-      <li>💻 Nov–Dec 2024 – Virtual dates</li>
-      <li>❤️ Feb 2025 – Valentine’s week together</li>
-      <li>🎂 April 2025 – First trip to the hills</li>
-    </ul>
-  </section>
+  <main>
+    <section class="intro">
+      <h2>Hi, Debadyooti & Pal!</h2>
+      <p>This is your own cozy space on the web, filled with memories, surprises, and love 💕</p>
+    </section>
 
-  <!-- Gallery -->
-  <section class="gallery">
-    <h2>Our Gallery 📸</h2>
-    <div class="grid">
-      <img src="https://placekitten.com/300/200" alt="Memory 1" />
-      <img src="https://placekitten.com/301/200" alt="Memory 2" />
-      <img src="https://placekitten.com/302/200" alt="Memory 3" />
-      <img src="https://placekitten.com/303/200" alt="Memory 4" />
-    </div>
-  </section>
+    <section class="quick-links">
+      <h3>✨ Explore ✨</h3>
+      <ul>
+        <li><a href="gallery.html">Our Gallery</a></li>
+        <li><a href="date.html">Date Night Planner</a></li>
+        <li><a href="docs.html">Documents</a></li>
+      </ul>
+    </section>
+  </main>
 
-  <!-- Date Night Planner -->
-  <section class="planner">
-    <h2>Date Night Planner ✨</h2>
-    <form>
-      <label>Pick a date: <input type="date" /></label>
-      <label>Activity: <input type="text" placeholder="Movie, Dinner..." /></label>
-      <button type="submit">Save 💖</button>
-    </form>
-  </section>
-
-  <!-- Memories & Letters -->
-  <section class="memories">
-    <h2>Memories & Letters 💌</h2>
-    <p>A place to keep our notes, letters, and love forever 🌷</p>
-    <div class="note">“Every second counted…”</div>
-    <div class="note">“You’re my sunshine 🌻”</div>
-  </section>
-
-  <!-- Contact/Invites -->
-  <section class="contact">
-    <h2>Special Invites 🎉</h2>
-    <p>“Movie night on Friday? 🍿”</p>
-    <p>“Let’s cook together this weekend 👩‍🍳👨‍🍳”</p>
-  </section>
-
-  <!-- Footer -->
   <footer>
-    <p>Made with 💕 by Us | © 2025</p>
+    <p>Made with 💖 just for us</p>
   </footer>
+
 </body>
 </html>
