--- a/index.html
+++ b/index.html
@@ -7,31 +7,89 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <!-- Navbar -->
+  <nav class="navbar">
+    <ul>
+      <li><a href="#about">About</a></li>
+      <li><a href="#gallery">Gallery</a></li>
+      <li><a href="#memories">Memories</a></li>
+      <li><a href="#countdown">Countdown</a></li>
+      <li><a href="#bucketlist">Bucket List</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
 
-  <header>
-    <h1>🌸 Welcome to Palworld 🌸</h1>
-    <p>A little corner just for us</p>
-  </header>
+  <!-- About Section -->
+  <section id="about" class="section pastel-blue">
+    <div class="content left">
+      <h1>About Us</h1>
+      <p>This is our little world, filled with love, laughter, and adventures. Here’s a glimpse of who we are.</p>
+      <a href="about.html" class="btn">See More</a>
+    </div>
+    <div class="image right">
+      <img src="images/about.jpg" alt="About Us">
+    </div>
+  </section>
 
-  <main>
-    <section class="intro">
-      <h2>Hi, Debadyooti & Pal!</h2>
-      <p>This is your own cozy space on the web, filled with memories, surprises, and love 💕</p>
-    </section>
+  <!-- Gallery Section -->
+  <section id="gallery" class="section pastel-pink">
+    <div class="content right">
+      <h1>Our Gallery</h1>
+      <p>A collection of our favorite moments together, frozen in time to relive whenever we wish.</p>
+      <a href="gallery.html" class="btn">See More</a>
+    </div>
+    <div class="image left">
+      <img src="images/gallery.jpg" alt="Gallery">
+    </div>
+  </section>
 
-    <section class="quick-links">
-      <h3>✨ Explore ✨</h3>
-      <ul>
-        <li><a href="gallery.html">Our Gallery</a></li>
-        <li><a href="date.html">Date Night Planner</a></li>
-        <li><a href="docs.html">Documents</a></li>
-      </ul>
-    </section>
-  </main>
+  <!-- Memories Section -->
+  <section id="memories" class="section pastel-green">
+    <div class="content left">
+      <h1>Memories</h1>
+      <p>Every smile, every trip, and every little thing we share becomes a part of our story.</p>
+      <a href="memories.html" class="btn">See More</a>
+    </div>
+    <div class="image right">
+      <img src="images/memories.jpg" alt="Memories">
+    </div>
+  </section>
 
-  <footer>
-    <p>Made with 💖 just for us</p>
-  </footer>
+  <!-- Countdown Section -->
+  <section id="countdown" class="section pastel-yellow">
+    <div class="content right">
+      <h1>Countdown</h1>
+      <p>Counting down the days, hours, and minutes until we’re together again.</p>
+      <a href="countdown.html" class="btn">See More</a>
+    </div>
+    <div class="image left">
+      <img src="images/countdown.jpg" alt="Countdown">
+    </div>
+  </section>
+
+  <!-- Bucket List Section -->
+  <section id="bucketlist" class="section pastel-purple">
+    <div class="content left">
+      <h1>Bucket List</h1>
+      <p>Our dreams, adventures, and plans — everything we want to experience together.</p>
+      <a href="bucketlist.html" class="btn">See More</a>
+    </div>
+    <div class="image right">
+      <img src="images/bucketlist.jpg" alt="Bucket List">
+    </div>
+  </section>
+
+  <!-- Contact Section -->
+  <section id="contact" class="section pastel-orange">
+    <div class="content right">
+      <h1>Contact</h1>
+      <p>Send us your thoughts, love, or even just a simple hello.</p>
+      <a href="contact.html" class="btn">See More</a>
+    </div>
+    <div class="image left">
+      <img src="images/contact.jpg" alt="Contact">
+    </div>
+  </section>
 
 </body>
 </html>
