--- a/index.html
+++ b/index.html
@@ -3,93 +3,85 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Palworld</title>
+  <title>Our Story</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Navbar -->
-  <nav class="navbar">
+
+  <!-- Navigation -->
+  <nav>
     <ul>
-      <li><a href="#about">About</a></li>
+      <li><a href="#hero">Home</a></li>
+      <li><a href="#story">Our Story</a></li>
       <li><a href="#gallery">Gallery</a></li>
-      <li><a href="#memories">Memories</a></li>
-      <li><a href="#countdown">Countdown</a></li>
-      <li><a href="#bucketlist">Bucket List</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="#timeline">Journey</a></li>
+      <li><a href="#notes">Love Notes</a></li>
+      <li><a href="#future">Future</a></li>
     </ul>
   </nav>
 
-  <!-- About Section -->
-  <section id="about" class="section pastel-blue">
-    <div class="content left">
-      <h1>About Us</h1>
-      <p>This is our little world, filled with love, laughter, and adventures. Here’s a glimpse of who we are.</p>
-      <a href="about.html" class="btn">See More</a>
+  <!-- Hero -->
+  <section id="hero" class="hero">
+    <h1>Our Love Story</h1>
+    <p>A journey of laughter, memories, and forever ❤️</p>
+    <a href="#story" class="btn">Start Scrolling</a>
+  </section>
+
+  <!-- Our Story -->
+  <section id="story" class="section">
+    <div class="text">
+      <h2>Our Story</h2>
+      <p>It all began when... (your story here).</p>
     </div>
-    <div class="image right">
-      <img src="images/about.jpg" alt="About Us">
+    <div class="image">
+      <img src="images/story.jpg" alt="Our Story">
     </div>
   </section>
 
-  <!-- Gallery Section -->
-  <section id="gallery" class="section pastel-pink">
-    <div class="content right">
-      <h1>Our Gallery</h1>
-      <p>A collection of our favorite moments together, frozen in time to relive whenever we wish.</p>
-      <a href="gallery.html" class="btn">See More</a>
-    </div>
-    <div class="image left">
+  <!-- Gallery -->
+  <section id="gallery" class="section alt">
+    <div class="image">
       <img src="images/gallery.jpg" alt="Gallery">
     </div>
-  </section>
-
-  <!-- Memories Section -->
-  <section id="memories" class="section pastel-green">
-    <div class="content left">
-      <h1>Memories</h1>
-      <p>Every smile, every trip, and every little thing we share becomes a part of our story.</p>
-      <a href="memories.html" class="btn">See More</a>
-    </div>
-    <div class="image right">
-      <img src="images/memories.jpg" alt="Memories">
+    <div class="text">
+      <h2>Our Gallery</h2>
+      <p>Some of our sweetest captured memories.</p>
+      <a href="gallery.html" class="btn">See Full Gallery</a>
     </div>
   </section>
 
-  <!-- Countdown Section -->
-  <section id="countdown" class="section pastel-yellow">
-    <div class="content right">
-      <h1>Countdown</h1>
-      <p>Counting down the days, hours, and minutes until we’re together again.</p>
-      <a href="countdown.html" class="btn">See More</a>
+  <!-- Timeline -->
+  <section id="timeline" class="section">
+    <div class="text">
+      <h2>Our Journey</h2>
+      <p>From the first hello to where we are today...</p>
     </div>
-    <div class="image left">
-      <img src="images/countdown.jpg" alt="Countdown">
-    </div>
-  </section>
-
-  <!-- Bucket List Section -->
-  <section id="bucketlist" class="section pastel-purple">
-    <div class="content left">
-      <h1>Bucket List</h1>
-      <p>Our dreams, adventures, and plans — everything we want to experience together.</p>
-      <a href="bucketlist.html" class="btn">See More</a>
-    </div>
-    <div class="image right">
-      <img src="images/bucketlist.jpg" alt="Bucket List">
+    <div class="image">
+      <img src="images/timeline.jpg" alt="Timeline">
     </div>
   </section>
 
-  <!-- Contact Section -->
-  <section id="contact" class="section pastel-orange">
-    <div class="content right">
-      <h1>Contact</h1>
-      <p>Send us your thoughts, love, or even just a simple hello.</p>
-      <a href="contact.html" class="btn">See More</a>
+  <!-- Love Notes -->
+  <section id="notes" class="notes">
+    <h2>Love Notes</h2>
+    <p>"You are my favorite chapter of life." 💌</p>
+  </section>
+
+  <!-- Future Plans -->
+  <section id="future" class="section alt">
+    <div class="image">
+      <img src="images/future.jpg" alt="Future">
     </div>
-    <div class="image left">
-      <img src="images/contact.jpg" alt="Contact">
+    <div class="text">
+      <h2>Our Future</h2>
+      <p>Together, building dreams and forever adventures.</p>
     </div>
   </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>Made with ❤️ by Us</p>
+  </footer>
 
 </body>
 </html>
