--- a/index.html
+++ b/index.html
@@ -14,74 +14,57 @@
       <li><a href="#hero">Home</a></li>
       <li><a href="#story">Our Story</a></li>
       <li><a href="#gallery">Gallery</a></li>
-      <li><a href="#timeline">Journey</a></li>
-      <li><a href="#notes">Love Notes</a></li>
-      <li><a href="#future">Future</a></li>
+      <li><a href="#milestones">Milestones</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
 
-  <!-- Hero -->
-  <section id="hero" class="hero">
-    <h1>Our Love Story</h1>
-    <p>A journey of laughter, memories, and forever ❤️</p>
-    <a href="#story" class="btn">Start Scrolling</a>
+  <!-- Hero / Welcome Section -->
+  <section id="hero" class="section">
+    <div class="text">
+      <h1>Welcome to Our Journey</h1>
+      <p>A little place where our love, laughter, and memories live together 💕</p>
+    </div>
+    <img src="images/hero.jpg" alt="Couple Picture">
   </section>
 
   <!-- Our Story -->
   <section id="story" class="section">
     <div class="text">
       <h2>Our Story</h2>
-      <p>It all began when... (your story here).</p>
+      <p>It all started with a conversation, and slowly grew into something truly special.  
+         From late-night talks to unforgettable trips, every moment has been a chapter in our love story.</p>
     </div>
-    <div class="image">
-      <img src="images/story.jpg" alt="Our Story">
-    </div>
+    <img src="images/story.jpg" alt="Our Story">
   </section>
 
   <!-- Gallery -->
-  <section id="gallery" class="section alt">
-    <div class="image">
-      <img src="images/gallery.jpg" alt="Gallery">
-    </div>
+  <section id="gallery" class="section">
     <div class="text">
-      <h2>Our Gallery</h2>
-      <p>Some of our sweetest captured memories.</p>
-      <a href="gallery.html" class="btn">See Full Gallery</a>
+      <h2>Gallery</h2>
+      <p>Click below to see our favorite captured moments together ✨</p>
+      <a href="gallery.html" class="btn">View Gallery</a>
     </div>
+    <img src="images/gallery-preview.jpg" alt="Gallery Preview">
   </section>
 
-  <!-- Timeline -->
-  <section id="timeline" class="section">
+  <!-- Milestones -->
+  <section id="milestones" class="section">
     <div class="text">
-      <h2>Our Journey</h2>
-      <p>From the first hello to where we are today...</p>
+      <h2>Milestones</h2>
+      <p>From our first trip together to moving closer to each other, these are the little victories that mean the world to us.</p>
     </div>
-    <div class="image">
-      <img src="images/timeline.jpg" alt="Timeline">
-    </div>
+    <img src="images/milestones.jpg" alt="Milestones">
   </section>
 
-  <!-- Love Notes -->
-  <section id="notes" class="notes">
-    <h2>Love Notes</h2>
-    <p>"You are my favorite chapter of life." 💌</p>
-  </section>
-
-  <!-- Future Plans -->
-  <section id="future" class="section alt">
-    <div class="image">
-      <img src="images/future.jpg" alt="Future">
-    </div>
+  <!-- Contact / Closing -->
+  <section id="contact" class="section">
     <div class="text">
-      <h2>Our Future</h2>
-      <p>Together, building dreams and forever adventures.</p>
+      <h2>With Love ❤️</h2>
+      <p>This is just the beginning. Let’s keep writing our story, one memory at a time.</p>
     </div>
+    <img src="images/closing.jpg" alt="Closing Image">
   </section>
-
-  <!-- Footer -->
-  <footer>
-    <p>Made with ❤️ by Us</p>
-  </footer>
 
 </body>
 </html>
