--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h1>Welcome to Our Journey</h1>
       <p>A little place where our love, laughter, and memories live together 💕</p>
     </div>
-    <img src="images/hero.jpg" alt="Couple Picture">
+    <img src="images/Pal with Ramen.PNG" alt="Couple Picture">
   </section>
 
   <!-- Our Story -->
