--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
   <!-- Hero / Welcome Section -->
   <section id="hero" class="section">
     <div class="text">
-      <h1>Welcome to Our Journey</h1>
-      <p>A little place where our love, laughter, and memories live together 💕</p>
+      <h1>Welcome to Our Page</h1>
+      <p>This is our little corner of the internet—kind of like a scrapbook, but without the glue stains and glitter explosions. It’s where we keep the highlights: the moments that made us laugh, the ones that made us melt, and the ones we’ll probably argue about who remembered correctly. Think of it as our digital memory lane, sprinkled with a bit of romance and inside jokes only we truly get. Scroll through and you’ll see the story we’re writing together—one silly, sweet, and slightly sappy chapter at a time. 💕</p>
     </div>
     <img src="images/Pal with Ramen.PNG" alt="Couple Picture">
   </section>
