--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
     </ul>
   </nav>
 
-  <!-- Hero / Welcome Section -->
-  <section id="hero" class="section">
+  <!-- Hero -->
+  <section id="hero">
     <div class="text">
       <h1>Welcome to Our Page</h1>
-      <p>This is our little corner of the internet—kind of like a scrapbook, but without the glue stains and glitter explosions. It’s where we keep the highlights: the moments that made us laugh, the ones that made us melt, and the ones we’ll probably argue about who remembered correctly. Think of it as our digital memory lane, sprinkled with a bit of romance and inside jokes only we truly get. Scroll through and you’ll see the story we’re writing together—one silly, sweet, and slightly sappy chapter at a time. 💕</p>
+      <p>This is our little corner of the internet—kind of like a scrapbook, but without the glue stains and glitter explosions. It’s where we keep the highlights: the moments that made us laugh, the ones that made us melt, and the ones we’ll probably argue about who remembered correctly. Think of it as our digital memory lane, sprinkled with a bit of romance and inside jokes only we truly get.</p>
     </div>
     <img src="images/Pal with Ramen.PNG" alt="Couple Picture">
   </section>
@@ -32,8 +32,7 @@
   <section id="story" class="section">
     <div class="text">
       <h2>Our Story</h2>
-      <p>It all started with a conversation, and slowly grew into something truly special.  
-         From late-night talks to unforgettable trips, every moment has been a chapter in our love story.</p>
+      <p>It all started with a conversation, and slowly grew into something truly special. From late-night talks to unforgettable trips, every moment has been a chapter in our love story.</p>
     </div>
     <img src="images/story.jpg" alt="Our Story">
   </section>
@@ -57,7 +56,7 @@
     <img src="images/milestones.jpg" alt="Milestones">
   </section>
 
-  <!-- Contact / Closing -->
+  <!-- Contact -->
   <section id="contact" class="section">
     <div class="text">
       <h2>With Love ❤️</h2>
